--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Sorting algorithm visualizer using D3js. It will help you to understand the algorithm. I've used swapping animation for clear understanding of the algorithm."
     />
-    <title>Sorting Algorithm Visualizer | Najmul H. Bappy</title>
+    <title>Sorting Algorithm Visualizer | Pratiksha</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap.min.css"
