--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div class="footer-text">
         <p>
           Made with <span class="love">❤</span> by
-          <a href="https://nbappy.me/">Najmul H. Bappy</a>
+          <a href="https://nbappy.me/">Pratiksha</a>
         </p>
       </div>
     </footer>
