--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <footer>
       <div class="footer-text">
         <p>
-          Made with <span class="love">❤</span> by
+          Made with <span class="love"></span> by
           <a href="https://nbappy.me/">Pratiksha</a>
         </p>
       </div>
